# ha-cpu-capacity-integration

./: .pre-commit-config.yaml  README.md  hacs.json  pyproject.toml  renovate.json
.github/workflows/: hacs-validation.yaml  pre-commit.yaml  release.yaml  tests.yaml  update-pre-commit.yaml
custom_components/cpu_capacity/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
tests/: test_coordinator.py
