[project]
name = "ha-cpu-capacity-integration"
version = "0.0.1"
requires-python = ">=3.14.2"
dependencies = []

[dependency-groups]
test = [
  "pytest-homeassistant-custom-component>=0.13.323",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"

[tool.uv]
package = false
